--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
   }
+
   html {
     min-height: 100vh;
   }
@@ -22,9 +23,9 @@
 
   .tinder-container {
     background-color: rgb(235, 233, 233);
-    max-width: 500px;
+    width: auto;
     margin: auto auto 20px;
-    padding: 15px 0px 160px 0px;
+    padding: 15px 0px 20px 0px;
     display: inline-block;
   }
 
@@ -87,9 +88,45 @@
     margin-left: 10px;
   }
 
+
+  .small-button {
+    display: inline-block;
+    background-color: rgb(235, 233, 233);
+    width: 75px;
+    height: 75px;
+    padding: 8px;
+    border-style: solid;
+    border-radius: 100%;
+    border-color: rgb(114 153 224 / 15%);
+    border-width: 10px;
+  }
+
   .reload {
-    border-radius: 50%;
-    max-width: 50px;
-    max-height: 50px;
-    box-shadow: inset black 10px;
+    display: block;
+    max-width: 40px;
+    max-height: 40px;
+  }
+
+  .big-button {
+    display: inline-block;
+    background-color: rgb(235, 233, 233);
+    max-width: 95px;
+    max-height: 95px;
+    padding: 10px;
+    border-style: solid;
+    border-radius: 100%;
+    border-color: rgb(114 153 224 / 15%);
+    border-width: 10px;    
+  }
+
+  .b-button {
+    display: block;
+    max-width: 60px;
+    max-height: 60px;
+  }
+
+  .super-like {
+    display: block;
+    max-width: 40px;
+    max-height: 40px;
   }
