--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -99,6 +99,7 @@
     border-radius: 100%;
     border-color: rgb(114 153 224 / 15%);
     border-width: 10px;
+    margin-bottom: 45px;
   }
 
   .reload {
@@ -116,7 +117,8 @@
     border-style: solid;
     border-radius: 100%;
     border-color: rgb(114 153 224 / 15%);
-    border-width: 10px;    
+    border-width: 10px;
+    margin: 0px 6px;    
   }
 
   .b-button {
