--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -153,3 +153,25 @@
     z-index: 2;
   }
   
+  .match-text {
+    margin: 50px 28vw;
+    width: 550px;
+  }
+
+  .match-photo-will {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    overflow: hidden;
+    display: inline-block;
+    margin: 0px 20px 0px 32vw;
+  }
+
+  .match-photo-maria {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    overflow: hidden;
+    display: inline-block;
+    margin: 0px ;
+  }
