--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -200,5 +200,75 @@
   .continue-button:hover {
     color: rgb(61, 55, 55);
     transition: .2s;
+  }
 
+  /*Chat*/
+  .body-chat {  
+    background-color: #fd7e49;
+    background-image: linear-gradient(#fa7552, #f97453, #ed6069, #e85478, #e6517b);
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .chat-container {
+  background-color: rgb(235, 233, 233);
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  margin-left: 360px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  border-bottom: 4px solid rgb(114 153 224 / 15%); 
+  }
+
+  .arrow-triangle {
+    padding: 20px;
+    box-shadow: 3px -3px 0 2px #f06463 inset;
+    border: solid transparent;
+    border-width: 0 0 42px 41px;
+    width: 40px;
+    height: 40px;
+    transform: rotate(45deg);
+    margin-top: 26px;
+    padding-left: 15px;
+    display: flex;
+    justify-content: start;
+  }
+
+  .arrow-retangle {
+    width: 60px;
+    height: 4px;
+    background: #f06463;
+    display: flex;
+    margin-left: -34px;
+    margin-top: 66px;
+  }
+
+  .profile-chat {
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+    overflow: hidden;
+    margin-left: 50px;
+    margin-top: 15px;
+  }
+
+  .chat-name{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    margin: 50px 10px 10px 26px;
+  }
+
+  .dots {
+    font-size: 60px;
+    margin-left: 160px;
+    margin-top: 45px;
+  }
+
+  .menu-chat {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    margin: 4px 0px 4px 0px;
+    background-color: #f06463;
   }
