--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -226,7 +226,7 @@
     box-shadow: 3px -3px 0 2px #f06463 inset;
     border: solid transparent;
     border-width: 0 0 42px 41px;
-    width: 40px;
+    width: 50px;
     height: 40px;
     transform: rotate(45deg);
     margin-top: 26px;
@@ -240,7 +240,7 @@
     height: 4px;
     background: #f06463;
     display: flex;
-    margin-left: -34px;
+    margin-left: -32px;
     margin-top: 66px;
   }
 
@@ -275,10 +275,10 @@
 
   .chat-body {
     background-color: rgb(235, 233, 233);
-    height: fit-content;
+    height: 515px;
     width: auto;
     padding: 50px 20px;
-    margin: 0px 441px;
+    margin: 0px 440px;
   }
 
   .date-chat {
@@ -287,12 +287,13 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px; 
     text-align: center;
+    margin-bottom: 10px;
   }
 
   .first-message {
     background-color: #e5e5e5;
     color: rgb(131, 127, 127);
-    border-radius: 25px 25px 25px 0px ;
+    border-radius: 25px 25px 25px 5px ;
     width: fit-content;
     padding: 12px;
   }
@@ -300,8 +301,61 @@
   .first-answer {
     background-color: #21b9fc;
     color: rgb(235, 233, 233);
-    border-radius: 25px 25px 0px 25px;
+    border-radius: 25px 25px 5px 25px;
     max-width: 280px;
     padding: 12px;
     margin-left: 320px;
   }
+
+  .answer-box {
+  background-color: rgb(235, 233, 233);
+  border-top: 4px solid rgb(114 153 224 / 15%);
+  width: auto;
+  height: fit-content;
+  margin: 0px 440px;
+  padding: 10px;
+  display: flex;
+  }
+
+  .photo-button {
+  width: 50px;
+  height: 50px;
+  background-color: #e6517b;
+  border-radius: 100%;
+  overflow: hidden;
+  padding: 5px;
+  margin-right: 10px;
+  margin-left: 5px;
+
+  }
+
+  .gif-button {
+    background-color: #33adff;
+    color:  rgb(235, 233, 233);
+    font-family: 'Courier New', Courier, monospace;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    padding: 16px 10px;
+  }
+  
+  .message-box {
+    background-color: rgb(235, 233, 233);
+    border: 4px solid rgb(114 153 224 / 15%);
+    border-radius: 25px;
+    width: 500px;
+    padding: 10px;
+    color: rgb(114 153 224 / 35%);
+    font-family: 'Courier New', Courier, monospace;
+    margin-left: 10px;
+    margin-top: 3px;
+    display: flex;
+  }
+
+  .send {
+  margin-left: 280px;
+  margin-right: 0;
+  font-weight: bolder;
+  color: rgb(114 153 224 / 45%);
+  }
+
