--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -359,3 +359,33 @@
   color: rgb(114 153 224 / 45%);
   }
 
+/*Polaroid*/
+
+..polaroid-container {
+  width: 50vw;
+  height: 50vh;
+  padding: 40px auto;
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 25vw 25vw 25vw 25vw;
+  grid-column-gap: none;  
+  grid-row-gap: 40px;
+}
+
+.polaroid-frame {
+  background-color: white;
+  padding: 15px 15px 30px;
+  border-style: solid;
+  border-color: rgb(228, 223, 223);
+  grid-column-start: 2;
+  grid-column-end: 3;
+  overflow-y: auto;
+}
+
+.photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow-y: auto;
+}
