--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -206,7 +206,7 @@
   .body-chat {  
     background-color: #fd7e49;
     background-image: linear-gradient(#fa7552, #f97453, #ed6069, #e85478, #e6517b);
-    height: 100vh;
+    height: 112vh;
     width: 100vw;
   }
 
@@ -310,9 +310,9 @@
   .answer-box {
   background-color: rgb(235, 233, 233);
   border-top: 4px solid rgb(114 153 224 / 15%);
-  width: auto;
+  width: 638px;
   height: fit-content;
-  margin: 0px 440px;
+  margin: 0px 364px;
   padding: 10px;
   display: flex;
   }
@@ -345,6 +345,7 @@
     border-radius: 25px;
     width: 500px;
     padding: 10px;
+    padding-top: 15px;
     color: rgb(114 153 224 / 35%);
     font-family: 'Courier New', Courier, monospace;
     margin-left: 10px;
@@ -360,27 +361,46 @@
   }
 
 /*Polaroid*/
+.body {
+  background-color: rgb(63, 72, 82);
+}
 
-..polaroid-container {
-  max-width: 50px;
-  max-height: 50px;
-  padding: 40px auto;
-  margin: auto;
-
+.polaroid-container {
+  min-height: calc(100vh - 70px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(63, 72, 82);
+  margin-top: 600px;
 }
 
 .polaroid-frame {
-  background-color: white;
-  padding: 15px 15px 30px;
-  border-style: solid;
-  border-color: rgb(228, 223, 223);
-  overflow-y: auto;
-  overflow: hidden;
+  background-color: rgb(235, 233, 233);
+  height: auto;
+  padding: 20px 20px 60px 20px;
+  margin: 24px auto 500px;
 }
 
 .photo {
+    width: 300px;
+    min-height: 400px;
+    object-fit: cover;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  height: 150px;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  overflow-y: auto;
+  background-color: rgb(63, 72, 82);
+  padding-top: 0;
+  margin-top: 0%;
+  position: fixed;
+  bottom: 0;
+}
+
+.instax {
+height: 150px;
+width: 620px;
+padding-right: 70px;
 }
