--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -365,6 +365,19 @@
   background-color: rgb(63, 72, 82);
 }
 
+.kombi{
+height: 80px;
+width: auto;
+margin: 50px 0 0 15px;
+left: 0;
+position: relative;
+transition: left 3s ease-in;
+}
+
+.kombi:hover {
+  left: 800px;
+}
+
 .polaroid-container {
   min-height: calc(100vh - 70px);
   display: flex;
