--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -363,6 +363,7 @@
 /*Polaroid*/
 .body {
   background-color: rgb(63, 72, 82);
+  scroll-behavior: auto;
 }
 
 .kombi{
@@ -371,11 +372,21 @@ width: auto;
 margin: 50px 0 0 15px;
 left: 0;
 position: relative;
-transition: left 3s ease-in;
 }
 
-.kombi:hover {
-  left: 800px;
+.kombi-animator {
+  border: 0;
+  background: initial;
+}
+
+.kombi-animator:focus .kombi {
+  animation: andar 8s;
+}
+
+@keyframes andar {
+  50% {
+    left: 800px;
+  }
 }
 
 .polaroid-container {
@@ -385,6 +396,8 @@ transition: left 3s ease-in;
   justify-content: center;
   background-color: rgb(63, 72, 82);
   margin-top: 600px;
+
+
 }
 
 .polaroid-frame {
