--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -389,6 +389,110 @@ position: relative;
   }
 }
 
+.kombi-container {
+display: flex;
+}
+
+.kombi-text {
+background: initial;
+border: 0;
+color: white;
+font-family: 'Dancing Script', cursive;
+font-size: 50px;
+margin: 60px 0px 0px 210px;
+animation: fade 10s;
+opacity: 0;
+}
+
+.kombi-text-1 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 10s .4s;
+  opacity: 0;
+  }
+
+  .kombi-text-2 {
+    background: initial;
+    border: 0;
+    color: white;
+    font-family: 'Dancing Script', cursive;
+    font-size: 50px;
+    margin: 60px 0px 0px 10px;
+    animation: fade 10s .8s;
+    opacity: 0;
+    }
+
+    .kombi-text-3 {
+      background: initial;
+      border: 0;
+      color: white;
+      font-family: 'Dancing Script', cursive;
+      font-size: 50px;
+      margin: 60px 0px 0px 10px;
+      animation: fade 10s 1.2s;
+      opacity: 0;
+      }
+
+      .kombi-text-4 {
+        background: initial;
+        border: 0;
+        color: white;
+        font-family: 'Dancing Script', cursive;
+        font-size: 50px;
+        margin: 60px 0px 0px 10px;
+        animation: fade 10s 1.6s;
+        opacity: 0;
+        }
+
+        .kombi-text-5 {
+          background: initial;
+          border: 0;
+          color: white;
+          font-family: 'Dancing Script', cursive;
+          font-size: 50px;
+          margin: 60px 0px 0px 10px;
+          animation: fade 10s 2s;
+          opacity: 0;
+          }
+
+          .kombi-text-6 {
+            background: initial;
+            border: 0;
+            color: white;
+            font-family: 'Dancing Script', cursive;
+            font-size: 50px;
+            margin: 60px 0px 0px 10px;
+            animation: fade 10s 2.4s;
+            opacity: 0;
+            }
+
+            .kombi-text-7 {
+              background: initial;
+              border: 0;
+              color: white;
+              font-family: 'Dancing Script', cursive;
+              font-size: 50px;
+              margin: 60px 0px 0px 10px;
+              animation: fade 10s 2.8s;
+              opacity: 0;
+            }
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+ 50%{
+   opacity: 1;
+ }
+  100% {
+    opacity: 0;
+  }
+}
+
 .polaroid-container {
   min-height: calc(100vh - 70px);
   display: flex;
