--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -544,6 +544,45 @@ z-index: 0;
   opacity: 1;
 }
 
+.last-one {
+  min-width: 300px;
+  max-width: 300px;
+  max-height: 330px;
+  min-height: 330px;
+  margin: auto;
+  margin-bottom: 150px;
+  background-color: #2c0000ce;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.film {
+  min-width: 300px;
+  max-width: 300px;
+  height: auto;
+  margin: auto;
+  padding: 0;
+  object-fit: contain;
+}
+
+.b-text {
+  background-color: initial;
+  height: 310px;
+  width: 211px;
+  position: absolute;
+  justify-content: center;
+  margin-left: 42px;
+}
+
+.recharge {
+  padding: 10px;
+  font-family: 'Codystar', cursive;
+  color: white;
+  font-size: 25px;
+
+}
 
 .footer {
   display: flex;
