--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -269,7 +269,7 @@
     width: 10px;
     height: 10px;
     border-radius: 100%;
-    margin: 4px 0px 4px 0px;
+    margin: 4px 0px;
     background-color: #f06463;
   }
 
@@ -374,11 +374,6 @@ left: 0;
 position: relative;
 }
 
-.kombi-animator {
-  border: 0;
-  background: initial;
-}
-
 .kombi {
 animation: andar 10s;
 z-index: 1;
@@ -417,71 +412,71 @@ z-index: 0;
   opacity: 0;
   }
 
-  .kombi-text-2 {
-    background: initial;
-    border: 0;
-    color: white;
-    font-family: 'Dancing Script', cursive;
-    font-size: 50px;
-    margin: 60px 0px 0px 10px;
-    animation: fade 4s 1.2s;
-    opacity: 0;
-    }
+.kombi-text-2 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 1.2s;
+  opacity: 0;
+  }
 
-    .kombi-text-3 {
-      background: initial;
-      border: 0;
-      color: white;
-      font-family: 'Dancing Script', cursive;
-      font-size: 50px;
-      margin: 60px 0px 0px 10px;
-      animation: fade 4s 1.4s;
-      opacity: 0;
-      }
+.kombi-text-3 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 1.4s;
+  opacity: 0;
+  }
 
-      .kombi-text-4 {
-        background: initial;
-        border: 0;
-        color: white;
-        font-family: 'Dancing Script', cursive;
-        font-size: 50px;
-        margin: 60px 0px 0px 10px;
-        animation: fade 4s 1.6s;
-        opacity: 0;
-        }
+.kombi-text-4 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 1.6s;
+  opacity: 0;
+  }
 
-        .kombi-text-5 {
-          background: initial;
-          border: 0;
-          color: white;
-          font-family: 'Dancing Script', cursive;
-          font-size: 50px;
-          margin: 60px 0px 0px 10px;
-          animation: fade 4s 1.8s;
-          opacity: 0;
-          }
+.kombi-text-5 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 1.8s;
+  opacity: 0;
+  }
 
-          .kombi-text-6 {
-            background: initial;
-            border: 0;
-            color: white;
-            font-family: 'Dancing Script', cursive;
-            font-size: 50px;
-            margin: 60px 0px 0px 10px;
-            animation: fade 4s 2s;
-            opacity: 0;
-            }
+.kombi-text-6 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 2s;
+  opacity: 0;
+  }
 
-            .kombi-text-7 {
-              background: initial;
-              border: 0;
-              color: white;
-              font-family: 'Dancing Script', cursive;
-              font-size: 50px;
-              margin: 60px 0px 0px 10px;
-              animation: fade 4s 2.2s;
-              opacity: 0;
-            }
+.kombi-text-7 {
+  background: initial;
+  border: 0;
+  color: white;
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  margin: 60px 0px 0px 10px;
+  animation: fade 4s 2.2s;
+  opacity: 0;
+  }
 
 @keyframes fade {
   0% {
@@ -515,8 +510,7 @@ z-index: 0;
 
 .photo {
     width: 300px;
-    max-height: 400px;
-    min-height: 400px;
+    height: 400px;
     object-fit: cover;
     opacity: 0;
     transition: 1.5s;
@@ -534,8 +528,7 @@ z-index: 0;
 
 .fade-photo {
   width: 300px;
-  max-height: 400px;
-  min-height: 400px;
+  height: 400px;
   cursor: pointer;
   background-color: black;
 }
@@ -545,10 +538,8 @@ z-index: 0;
 }
 
 .last-one {
-  min-width: 300px;
-  max-width: 300px;
-  max-height: 330px;
-  min-height: 330px;
+  width: 300px;
+  height: 330px;
   margin: auto;
   margin-bottom: 150px;
   background-color: #2c0000ce;
@@ -559,8 +550,7 @@ z-index: 0;
 }
 
 .film {
-  min-width: 300px;
-  max-width: 300px;
+  width: 300px;
   height: auto;
   margin: auto;
   padding: 0;
