--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -571,8 +571,9 @@ z-index: 0;
   font-family: 'Codystar', cursive;
   color: white;
   font-size: 25px;
-
+  text-decoration: none;
 }
+
 
 .footer {
   display: flex;
@@ -591,3 +592,6 @@ height: 150px;
 width: 620px;
 padding-right: 70px;
 }
+
+/*Letter*/
+
