--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -361,10 +361,30 @@
   }
 
 /*Polaroid*/
-.body {
-  background-color: rgb(63, 72, 82);
-  scroll-behavior: auto;
+#body {
+  background-image: url(../images/images-polaroid/back.png);
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-attachment: fixed;
+  height: 100vh;
 }
+
+.body-container {
+  height: calc(100vh - 70px);
+  overflow-y: scroll;
+  width: auto;
+  background: initial;
+}
+
+.body-container::-webkit-scrollbar {
+  width: 15px;
+}
+
+.body-container::-webkit-scrollbar-thumb {
+  background-color: hotpink;
+  border-radius: 25px;
+}
+
 
 .kombi{
 height: 80px;
@@ -392,7 +412,8 @@ display: flex;
 .kombi-text {
 background: initial;
 border: 0;
-color: white;
+color: rgb(95, 150, 119);
+font-weight: bolder;
 font-family: 'Dancing Script', cursive;
 font-size: 50px;
 margin: 60px 0px 0px 210px;
@@ -404,7 +425,8 @@ z-index: 0;
 .kombi-text-1 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -415,7 +437,8 @@ z-index: 0;
 .kombi-text-2 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -426,7 +449,8 @@ z-index: 0;
 .kombi-text-3 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -437,7 +461,8 @@ z-index: 0;
 .kombi-text-4 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -448,7 +473,8 @@ z-index: 0;
 .kombi-text-5 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -459,7 +485,8 @@ z-index: 0;
 .kombi-text-6 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -470,7 +497,8 @@ z-index: 0;
 .kombi-text-7 {
   background: initial;
   border: 0;
-  color: white;
+  color: rgb(95, 150, 119);
+  font-weight: bolder;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   margin: 60px 0px 0px 10px;
@@ -495,7 +523,7 @@ z-index: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(63, 72, 82);
+  background-color: initial;
   margin-top: 600px;
 
 
@@ -580,7 +608,7 @@ z-index: 0;
   justify-content: center;
   height: 150px;
   width: 100%;
-  background-color: rgb(63, 72, 82);
+  background-color: initial;
   padding-top: 0;
   margin-top: 0%;
   position: fixed;
