--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -8,6 +8,17 @@
     min-height: 100vh;
   }
 
+  /*The doors*/
+
+  #corpo {
+    background-image: url(../images/images-door/background-door1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    object-fit: cover;
+    height: 100vh;
+    width: auto;
+  }
+
   /*Tinder Profile*/
 
 .page-one {
@@ -367,24 +378,13 @@
   object-fit: contain;
   background-attachment: fixed;
   height: 100vh;
-}
-
-.body-container {
-  height: calc(100vh - 70px);
-  overflow-y: scroll;
   width: auto;
-  background: initial;
+  overflow-y: scroll;
 }
 
-.body-container::-webkit-scrollbar {
-  width: 15px;
+.body-countainer {
+padding-bottom: 1px;
 }
-
-.body-container::-webkit-scrollbar-thumb {
-  background-color: hotpink;
-  border-radius: 25px;
-}
-
 
 .kombi{
 height: 80px;
@@ -569,8 +569,8 @@ z-index: 0;
   width: 300px;
   height: 330px;
   margin: auto;
-  margin-bottom: 150px;
-  background-color: #2c0000ce;
+  margin-bottom: 230px;
+  background-color: #2c0000f3;
   display: flex;
   flex-direction: column;
   justify-content: center;
